--- a/styles.css
+++ b/styles.css
@@ -28,17 +28,26 @@ p {
 a {
     text-decoration: none;
     position: relative;
-    transition: opacity 300ms ease;
 }
 
+/* .link__hover-effect {
+    position: relative;
+} 
+
+i:hover {
+    opacity: 0.7;
+} */
+
+/* .link__hover-effect:after */
 .link__hover-effect:after {
     content: "";
     position: absolute;
     height: 3px;
     width: 0;
     bottom: -3px;
-    right: 0;
+    left: 0;
     transition: all 300ms ease;
+    background-color: transparent;
 }
 
 .link__hover-effect--white:after {
@@ -49,9 +58,10 @@ a {
     background-color: #000000;
 }
 
+/* .link__hover-effect:hover:after */
 .link__hover-effect:hover:after {
     width: 100%;
-    left: 0;
+    /* left: 0; */
 }
 
 li {
