--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,7 @@ p {
 a {
     text-decoration: none;
     position: relative;
+    /* transition: opacity 300ms ease; */
 }
 
 /* .link__hover-effect {
@@ -45,7 +46,7 @@ i:hover {
     height: 3px;
     width: 0;
     bottom: -3px;
-    left: 0;
+    right: 0;
     transition: all 300ms ease;
     background-color: transparent;
 }
@@ -58,10 +59,9 @@ i:hover {
     background-color: #000000;
 }
 
-/* .link__hover-effect:hover:after */
 .link__hover-effect:hover:after {
     width: 100%;
-    /* left: 0; */
+    left: 0; 
 }
 
 li {
@@ -120,6 +120,7 @@ nav {
     font-size: 16px;
     color: #242424;
     font-weight: 700;
+    display: inline-block;
 }
 
 .nav__link--anchor-primary {
